# claudtray

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  installer.iss
.cargo/: config.toml
.github/workflows/: release.yml
packaging/scoop/: claudtray.json  cloudtray.json
packaging/winget/: VictorMagne.ClaudTray.installer.yaml  VictorMagne.ClaudTray.locale.en-US.yaml  VictorMagne.ClaudTray.yaml  VictorMagne.CloudTray.installer.yaml  VictorMagne.CloudTray.locale.en-US.yaml  VictorMagne.CloudTray.yaml
packaging/winget/submit/: VictorMagne.ClaudTray.installer.yaml  VictorMagne.ClaudTray.locale.en-US.yaml  VictorMagne.ClaudTray.yaml  VictorMagne.CloudTray.installer.yaml  VictorMagne.CloudTray.locale.en-US.yaml  VictorMagne.CloudTray.yaml
src/: dpapi.rs  main.rs  model.rs  monitor.rs  notification.rs  renderer.rs  state.rs  window.rs
src/providers/: antigravity.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  http.rs  mod.rs  ollama.rs  openrouter.rs
src/ui/: dashboard.css  dashboard.html  dashboard.js
