[package]
name = "cloudtray"
version = "1.1.0"
edition = "2021"
description = "Real-time AI usage monitor (Claude Code, Copilot, Codex) in the Windows system tray"
license = "MIT"
homepage = "https://github.com/Victor-Magne/cloudtray"
repository = "https://github.com/Victor-Magne/cloudtray"
readme = "README.md"
keywords = ["claude", "ai", "usage", "monitor", "tray"]
categories = ["gui"]

[dependencies]
tao = "0.31"
tray-icon = "0.19"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
wry = { version = "0.55.1", features = ["transparent"] }
window-vibrancy = "0.7.1"
sysinfo = "0.39.3"
netstat2 = "0.11.2"
ureq = "3.3.0"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser", "dpapi", "wincrypt", "winbase", "minwindef"] }

[build-dependencies]
winres = "0.1.12"
